feat: 加入timer组件，实现时钟显示，并且边框流动的效果

--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "expo": {
     "name": "myDemo",
+    "orientation": "default",
     "slug": "myDemo",
     "version": "1.0.0",
-    "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "mydemo",
     "userInterfaceStyle": "automatic",
