--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-font": "~14.0.10",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.11",
+    "expo-navigation-bar": "^5.0.10",
     "expo-router": "~6.0.21",
     "expo-screen-orientation": "~9.0.8",
     "expo-splash-screen": "~31.0.13",
